--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>Quizzer</h1>
+      <h1>Sports Quizzer</h1>
     </header>
     <main class="main-content">
       <div class="quiz-container">
@@ -22,15 +22,15 @@
         </div>
         <div class="input-questions" id="input-questions">
           <div class="question"></div>
+          <div class="score" id="score"></div>
           <label for="amount-of-questions" id="label-amount"
             >Amount of questions:</label
           >
           <input type="number" id="amount-of-questions" /><br />
 
           <button class="btn-start" id="btn-start">Start quiz</button>
-          <div class="alert-message">
-            <p>You must enter a number of questions</p>
-          </div>
+          <p class="alert-message">You must enter a number of questions</p>
+          <button class="btn-play-again" id="btn-play-again">Play again</button>
         </div>
 
         <button class="next-questionBtn" id="next-questionBtn">
